<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userFragment"
        android:title="@string/user"
        android:icon="@drawable/ic_name"/>
    <item
        android:id="@+id/structureFragment"
        android:title="@string/structure"
        android:icon="@drawable/ic_structure"/>
    <item
        android:id="@+id/categoryFragment"
        android:title="@string/category"
        android:icon="@drawable/ic_category"/>
    <item
        android:id="@+id/traceFragment"
        android:title="@string/trace"
        android:icon="@drawable/ic_trace"/>
    <item
        android:id="@+id/profileAdminFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_user1"/>


</menu>