<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.fragment.AddEmployeeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear_add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edt_name_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginHorizontal="20dp"
                android:padding="8dp"
                android:background="@drawable/edt_shape"
                android:layout_marginVertical="10dp"
                android:drawableStart="@drawable/ic_name"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <EditText
                android:id="@+id/edt_first_name_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginHorizontal="20dp"
                android:padding="8dp"
                android:background="@drawable/edt_shape"
                android:layout_marginVertical="10dp"
                android:drawableStart="@drawable/ic_name"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <EditText
                android:id="@+id/edt_registration_key_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_key"
                android:layout_marginHorizontal="20dp"
                android:padding="8dp"
                android:background="@drawable/edt_shape"
                android:layout_marginVertical="10dp"
                android:drawableStart="@drawable/ic_code"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="20dp"
                android:padding="2dp"
                android:background="@drawable/edt_shape">
                <ImageView
                    android:id="@+id/img_str111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_structure"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"/>
                <com.example.gestiondecourrier.ui.recyclerview.EditTextStructureWithRecyclerView
                    android:id="@+id/edt_structure_employee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_shape"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/img_str111"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/edt_email_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_"
                android:layout_marginHorizontal="20dp"
                android:padding="8dp"
                android:background="@drawable/edt_shape"
                android:drawableStart="@drawable/ic_email"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"
                android:layout_marginVertical="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/button_shape"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@drawable/button_shape"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>