<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ui.fragment.UserDetailsFragment">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <RelativeLayout
          android:id="@+id/relative_user_details"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/img_back_user_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:src="@drawable/ic_back"/>
         <ImageView
             android:id="@+id/img_check_update_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:src="@drawable/ic_pen"/>
         <ProgressBar
             android:id="@+id/progress_user_details"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:visibility="gone"/>
      </RelativeLayout>

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_below="@+id/relative_user_details">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_below="@+id/relative_user_details"
             android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edt_name_user_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_shape"
                android:layout_marginVertical="15dp"
                android:enabled="false"
                android:drawableStart="@drawable/ic_name"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <EditText
                android:id="@+id/edt_first_name_user_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_shape"
                android:layout_marginVertical="15dp"
                android:enabled="false"
                android:drawableStart="@drawable/ic_name"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="20dp"
                android:padding="2dp"
                android:background="@drawable/edt_shape">
               <ImageView
                   android:id="@+id/img_str_user"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_structure"
                   android:layout_marginStart="7dp"
                   android:layout_marginTop="7dp"/>
               <com.example.gestiondecourrier.ui.recyclerview.EditTextStructureWithRecyclerView
                   android:id="@+id/edt_structure_user_details"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@drawable/edt_shape"
                   android:layout_marginStart="5dp"
                   android:layout_toEndOf="@+id/img_str_user"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/edt_function_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/function"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_shape"
                android:enabled="false"
                android:layout_marginVertical="15dp"
                android:drawableStart="@drawable/ic_job"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"/>
            <EditText
                android:id="@+id/edt_email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:background="@drawable/edt_shape"
                android:drawableStart="@drawable/ic_email"
                android:enabled="false"
                android:textCursorDrawable="@drawable/cursor"
                android:drawablePadding="5dp"
                android:layout_marginVertical="15dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:elevation="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"
                android:layout_gravity="center">
               <RelativeLayout
                   android:id="@+id/relative_generate_password"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="10dp">
                  <ImageView
                      android:id="@+id/img_generate_password"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:src="@drawable/ic_password_"/>
                  <TextView
                      android:id="@+id/txt_generate_password"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/generate_password"
                      android:layout_toEndOf="@+id/img_generate_password"
                      android:textColor="@color/black"
                      android:layout_marginHorizontal="5dp"
                      android:textSize="18sp"/>
               </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:id="@+id/check_box_admin"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   style="@style/CheckBoxStyle"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/admin"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:id="@+id/check_box_director"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   style="@style/CheckBoxStyle"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Director"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:id="@+id/check_box_acting_director"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   style="@style/CheckBoxStyle"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/director_acting"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_acting_directory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginHorizontal="25dp">
               <EditText
                   android:id="@+id/edt_begin_date_acting_directory"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:hint="@string/begin_date"
                   android:background="@color/white"
                   android:padding="6dp" />
               <EditText
                   android:id="@+id/edt_end_date_acting_directory"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:hint="@string/end_date"
                   android:background="@color/white"
                   android:padding="6dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:id="@+id/check_box_secretary"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   style="@style/CheckBoxStyle"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/secretary"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <CheckBox
                   android:id="@+id/check_box_acting_secretary"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="15dp"
                   style="@style/CheckBoxStyle"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/secretary_acting"
                   android:textColor="@color/black"
                   android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_acting_secretary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginHorizontal="25dp">
               <EditText
                   android:id="@+id/edt_begin_date_acting_secretary"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:hint="@string/begin_date"
                   android:background="@color/white"
                   android:padding="6dp"/>
               <EditText
                   android:id="@+id/edt_end_date_acting_secretary"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:hint="@string/end_date"
                   android:background="@color/white"
                   android:padding="6dp"
                   android:layout_marginBottom="10dp"/>
            </LinearLayout>

         </LinearLayout>
      </androidx.core.widget.NestedScrollView>

   </RelativeLayout>

</FrameLayout>